# linkedIn-post-automation-multi-agent

./: .coveragerc  .env.example  .flake8  .gitignore  =7.4.0  CHANGELOG.md  README.md  ROADMAP.md  config.json  main.py  next_task.md  orchestrator.py  project_spec.md  project_spec_build.notesnlh  pyproject.toml  pytest.ini  requirements.txt  run_tests.ps1  system_prompts.md
.chroma/: chroma.db
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  image_generator_agent.py  image_prompt_agent.py  prompt_generator_agent.py  research_agent.py  reviewer_agent.py  strategic_type_agent.py  topic_agent.py  writer_agent.py
core/: __init__.py  cost_tracking.py  dry_run.py  envelope.py  errors.py  fallback_tracker.py  llm_clients.py  logging.py  persistence.py  rag_setup.py  retry.py  run_context.py  system_prompts.py
database/: README.md  init_db.py  operations.py  topics.db
memory_bank/: README.md  digest_2025-11-15_cleaned.txt
scripts/: __init__.py  smoke_test.py
tests/: __init__.py  test_artifact_persistence.py  test_code_quality.py  test_cost_tracking.py  test_dry_run.py  test_error_handling.py  test_main.py  test_orchestrator.py  test_persona_compliance.py  test_rag_setup.py  test_system_prompts.py
tests/test_agents/: __init__.py  test_image_generator_agent.py  test_image_prompt_agent.py  test_prompt_generator_agent.py  test_research_agent.py  test_reviewer_agent.py  test_strategic_type_agent.py  test_topic_agent.py  test_writer_agent.py
tests/test_database/: test_init_db.py  test_operations.py
tests/test_integration/: README.md  __init__.py  test_llm_pipeline.py
